--- a/gui/src/net/exent/locutus/gui/Matching.form
+++ b/gui/src/net/exent/locutus/gui/Matching.form
@@ -40,6 +40,7 @@
           </Properties>
           <Events>
             <EventHandler event="treeWillExpand" listener="javax.swing.event.TreeWillExpandListener" parameters="javax.swing.event.TreeExpansionEvent" handler="matchingTreeTreeWillExpand"/>
+            <EventHandler event="valueChanged" listener="javax.swing.event.TreeSelectionListener" parameters="javax.swing.event.TreeSelectionEvent" handler="matchingTreeValueChanged"/>
             <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="matchingTreeKeyPressed"/>
           </Events>
         </Component>
