--- a/gui/src/net/exent/locutus/gui/Settings.form
+++ b/gui/src/net/exent/locutus/gui/Settings.form
@@ -1082,7 +1082,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Save &amp; restore default values"/>
+            <TitledBorder title="Save &amp; reset settings"/>
           </Border>
         </Property>
       </Properties>
@@ -1224,9 +1224,9 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="restoreLabel">
+        <Component class="javax.swing.JLabel" name="resetLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Restore default values:"/>
+            <Property name="text" type="java.lang.String" value="Reset:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
